# Qwasda

./: .gitignore  CHANGELOG.md  Qwasda.spec  README.md  debug_keys.py  pyproject.toml  qwasda.py  qwasda.spec  requirements.txt  setup.bat  start.bat  test_hook.py  test_minimal.py  test_minimal2.py  test_minimal3.py  test_minimal4.py  test_pynput.py
